dataBaseVersion/main.css
:root {
  --bg: #FFFFFF;
  --font-color: #000000;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: Helvetica, sans-serif;
  background-color: var(--bg);
}

a:link, a:visited {
  color: var(--font-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

header {
  position: sticky;
  top: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #000000;
  height: 56px;
  margin-bottom: 24px;
  font-size: 1.5rem;
}

footer {
  display: flex;
  margin-top: 24px;
  justify-content: center;
  align-items: center;
  background-color: #000000;
  height: 56px;
  color: lightgoldenrodyellow;
}

.page-title {
  padding: 0px 8px;
}

.icon {
  color: lightgoldenrodyellow;
  margin: 0px;
}

.text {
  padding: 0px 8px;
}

article, .grid-item p {
  font-size: 1.2rem;
  line-height: 1.7rem;
}

.end-icon {
  text-align: center;
}

.grid {
  display: grid;
  grid-template-columns: 1fr;
}

.grid-item img {
  width: 100%;
  height: 112px;
  object-fit: cover;
}

.authors {
  padding: 0px 8px;
}

.authors h3 {
  padding: 0px;
}

article img {
  width: 100%;
  height: auto;
}

@media screen and (min-width: 700px) {
  
  main {
    max-width: 1000px;
    margin: 0px auto;
  }

  .page-title {
    text-align: center;
  }
  
  .grid {
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-gap: 8px;
  }
  
  article {
    max-width: 700px;
    margin: 0px auto;
  }

  article img {
    max-height: 45vh;
    object-fit: cover;
  }

}

